--- a/package.json
+++ b/package.json
@@ -5,21 +5,59 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
-    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "build": "npm run build:optimize && npm run build:verify",
+    "build:optimize": "vite build && node scripts/optimize-build.js",
+    "build:verify": "node scripts/verify-build.js",
+    "build:analyze": "vite build --mode analyze && node scripts/analyze-bundle.js",
     "preview": "vite preview",
+    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint:fix": "eslint src --ext ts,tsx --fix",
+    "test": "vitest",
+    "test:watch": "vitest watch",
+    "test:coverage": "vitest run --coverage",
+    "format": "prettier --write \"src/**/*.{ts,tsx,css}\"",
+    "type-check": "tsc --noEmit",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.0.1",
-    "lucide-react": "^0.303.0",
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.2.0",
+    "@reduxjs/toolkit": "^2.4.0",
+    "@sentry/react": "^8.41.0",
+    "@sentry/tracing": "^7.114.0",
+    "@stripe/react-stripe-js": "^2.4.0",
+    "@stripe/stripe-js": "^2.4.0",
+    "chart.js": "^4.4.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "date-fns": "^3.3.1",
+    "dompurify": "^3.0.6",
+    "firebase": "^10.14.1",
+    "idb": "^8.0.0",
+    "jspdf": "^2.5.1",
+    "lucide-react": "^0.344.0",
+    "papaparse": "^5.4.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^9.0.4",
-    "react-router-dom": "^6.21.1"
+    "react-dropzone": "^14.2.3",
+    "react-image-gallery": "^1.3.0",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.22.1",
+    "redux-persist": "^6.0.0",
+    "sonner": "^1.4.0",
+    "tailwind-merge": "^2.2.1",
+    "uuid": "^9.0.1",
+    "web-vitals": "^3.5.2",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.0",
+    "@babel/plugin-transform-react-constant-elements": "^7.25.9",
+    "@babel/plugin-transform-react-jsx": "^7.25.9",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.25.9",
     "@radix-ui/react-slot": "^1.1.0",
     "@storybook/addon-a11y": "^7.6.20",
     "@storybook/addon-docs": "^7.6.6",
@@ -32,27 +70,51 @@
     "@storybook/react": "^7.6.20",
     "@storybook/react-vite": "^7.6.20",
     "@storybook/testing-library": "^0.2.2",
-    "@types/node": "^20.10.5",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "@typescript-eslint/eslint-plugin": "^6.15.0",
-    "@typescript-eslint/parser": "^6.15.0",
-    "@vitejs/plugin-react": "^3.0.1",
-    "autoprefixer": "^10.4.20",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^16.0.1",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/dompurify": "^3.0.5",
+    "@types/node": "^20.10.0",
+    "@types/papaparse": "^5.3.14",
+    "@types/react": "^18.2.12",
+    "@types/react-dom": "^18.2.1",
+    "@types/react-image-gallery": "^1.2.4",
+    "@types/uuid": "^9.0.8",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "@vitejs/plugin-react": "^4.3.4",
+    "@vitest/coverage-v8": "^1.3.1",
+    "autoprefixer": "^10.4.17",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "eslint": "^8.56.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.5",
     "eslint-plugin-storybook": "^0.6.15",
-    "postcss": "^8.4.49",
+    "postcss": "^8.4.35",
+    "prettier": "^3.2.5",
     "rollup-plugin-visualizer": "^5.12.0",
+    "sharp": "^0.33.0",
     "storybook": "^7.6.6",
     "tailwind-merge": "^2.5.5",
-    "tailwindcss": "^3.4.15",
+    "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
     "terser": "^5.26.0",
     "typescript": "^5.3.3",
-    "vite": "^4.5.0"
+    "vite": "^5.1.4",
+    "vite-plugin-pwa": "^0.21.0",
+    "vitest": "^2.1.6"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{json,css,md}": [
+      "prettier --write"
+    ]
   }
 }
